--- a/saving-food/src/styles/globals.css
+++ b/saving-food/src/styles/globals.css
@@ -13,7 +13,7 @@ html {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
   }
 }
