--- a/website/src/styles/globals.css
+++ b/website/src/styles/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #000;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 @layer utilities {
