--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -6,11 +6,13 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-size: 16px;
   line-height: 1.5;
   background-color: black;
   color: white;
   font-family: var(--font-qanelas-soft), system-ui, sans-serif;
+  scroll-behavior: smooth;
 }
 
 @layer utilities {
