--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html,
-body {
+body,
+#__next {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -35,6 +36,14 @@ body {
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 768px) {
+  /* Mobile-specific styles */
+  .fixed-fullscreen {
+    position: relative;
+    height: auto;
+  }
 }
 
 @keyframes gradientShift {
